Fix menu on mobile phone.

--- a/web/app/styles/components/_menu.less
+++ b/web/app/styles/components/_menu.less
@@ -1,5 +1,11 @@
 nav.menu
 {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+
+	width: 100%;
+
 	border-top: solid var(--gray) thin;
 	background: var(--background);
 
